# silberstral

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
img/: logo.psd
src/silberstral/: __init__.py  silberstral.py
test/: test_silberstral.py
