[metadata]
name = silberstral
version = 0.2.3
author = Tobias Kirschstein
author_email = tobias.kirschstein@gmail.com
description = Reveals the true shape of type vars
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/tobias-kirschstein/silberstral
# download_url = https://github.com/tobias-kirschstein/silberstral/archive/refs/tags/v0.1.2.tar.gz
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords =
    typing
    type var
    instantiation
    generics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    dacite >=1.6.0,<=1.7.0  # dacite==1.8.0 causes "unhashable type: 'list'" in silberstral.py:277

[options.packages.find]
where = src